change War to No Cooperation

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -119,7 +119,7 @@ The probability of nature selecting the high type for a given country is $p$. Th
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
 
-Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors, focused on studying players' belief structures, see Maor and Solan (2015).  Our model differs in that it adds an initial period, before the repeated Prisoner's Dilemma begins, in which players make costly concessions to each other.  We will see that these concessions enable signaling between the players that render the analysis of their beliefs much simpler than in Maor and Solan (2015).} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
+Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors, focused on studying players' belief structures, see Maor and Solan (2015).  Our model differs in that it adds an initial period, before the repeated Prisoner's Dilemma begins, in which players make costly concessions to each other.  We will see that these concessions enable signaling between the players that render the analysis of their beliefs much simpler than in Maor and Solan (2015).} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continuing conflict--military or otherwise. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
 
 The countries' stage game actions will be referred to as ``Trust'' and ``Distrust'' as represented in Table 1, where Country 1 is the row player and Country 2 is the column player.
 
@@ -132,7 +132,7 @@ The countries' stage game actions will be referred to as ``Trust'' and ``Distrus
 \end{tabular}
 \end{center}
 
-Here $T>0$ represents the benefit from a country's negotiating partner playing Trust. $D>0$ represents the damages incurred when a country's negotiating partner plays Distrust, while $W>0$ is the additional benefit a country receives when it plays Distrust itself. We will refer to the stage-game Nash Equilibrium of (Distrust, Distrust) as ``War.'' We will refer to (Trust,Trust) as Cooperation. In line with the assumption that the countries play a Prisoner's Dilemma in the stage game, we assume $T>W-D$. Note that this ensures that the joint payoffs from Cooperation are the highest among all the stage-game action profiles. 
+Here $T>0$ represents the benefit from a country's negotiating partner playing Trust. $D>0$ represents the damages incurred when a country's negotiating partner plays Distrust, while $W>0$ is the additional benefit a country receives when it plays Distrust itself. We will refer to the stage-game Nash Equilibrium of (Distrust, Distrust) as No Cooperation. We will refer to (Trust,Trust) as Cooperation. In line with the assumption that the countries play a Prisoner's Dilemma in the stage game, we assume $T>W-D$. Note that this ensures that the joint payoffs from Cooperation are the highest among all the stage-game action profiles. 
 
 Payoffs for a country are the sum the stage game payoffs, discounted by $\delta_i$. For example, if both parties play ``Trust'' in every period, the payoff for a player $i$ is $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}.$
 
@@ -148,7 +148,7 @@ Parameters are common knowledge with the exception of $\delta_i$, which is count
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
-When countries are faced with uncertainty about each other's motives, they can proceed in several ways, including giving concessions in order to signal their ability to Cooperate. We will examine three types of equilibria.\footnote{If the discount factor is high enough, there are many types of equilibria. Consider for instance oscillating every other period between (Trust,Trust) and (Distrust,Distrust) with a grim trigger ``War'' threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed and thus 	are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as most proofs. 
+When countries are faced with uncertainty about each other's motives, they can proceed in several ways, including giving concessions in order to signal their ability to Cooperate. We will examine three types of equilibria.\footnote{If the discount factor is high enough, there are many types of equilibria. Consider for instance oscillating every other period between (Trust,Trust) and (Distrust,Distrust) with a grim trigger Distrust threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed and thus 	are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as most proofs. 
 
 \subsection{Pooling equilibrium}
 In the \emph{pooling equilibrium}, neither negotiating party gives concessions in period 0, then both parties play Distrust in every period beginning with period 1. Countries do nothing to bridge the credibility gap, and thus do not cooperate. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace/cooperation is all that is required.  See the Appendix for a formal characterization of this type of equilibrium. 
@@ -250,7 +250,7 @@ This modification to the payoffs is the second change in the model relative to S
 
 For example, if both countries play Distrust, Country 1 receives not only the immediate value of the concession and then $W-D$ in each period. Its welfare now has two additional terms. First, an additional benefit term in each period of the repeated game $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. Second, Country 1 also incurs extra damages $D(1-\alpha_2) g_1$ in each period of the repeated game that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The other payoffs are modified analogously.\footnote{The results are qualitatively unchanged if the gifts are not scaled by the variables that represent the impacts of cooperation and non-cooperation, or if they are scaled by these variables but with a proportion other than 1 or many plausible non-linear functions of $T$, $W$ and $D$. The results are a bit simpler if there is no scaling, but we believe it is more realistic to assume that the future benefits and costs of the gifts are proportional to the direct benefits and costs of cooperation/non-cooperation. For instance, a county who could impose more damage without the future value of the concessions is likely to be able to better leverage a concession than a country who can impose less damage.}
 
-Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare in equilibrium is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the Cooperation outcome will be played. Conversely, in equilibrium, low types only participate in the ``War'' equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
+Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare in equilibrium is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the Cooperation outcome will be played. Conversely, in equilibrium, low types only participate in the No Cooperation equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
 
 We turn next to characterizing a concessions separating equilibrium in this environment with future material value.
 
@@ -333,7 +333,7 @@ This means that there are parameters under which Cooperation cannot be achieved 
 
 However, even if the negotiating parties are patient enough to separate when gifts are efficient, Lemma~\ref{lemma:efficiency} tells us that welfare will be higher with efficient gifts only when the probability of encountering a high type and the benefit from Cooperation are sufficiently large. Otherwise, welfare is higher under the \emph{concessions separating equilibrium with inefficient gifts} and this equilibrium is thus optimal. \hfill $\blacksquare$\\
 
-Inefficient concessions are optimal when there's a good chance of facing a low type who will use the concession against you (i.e. $p$ is small) as well as when the benefits from Cooperation are small relative to the damages from ``War.'' This finding of inefficiency is for profoundly different reasons than the literature related to Camerer (1988) or Prendergast and Stole (2001).\footnote{Since our initial setup is essentially identical to Camerer's, inefficiency of  pre-play communication would also manifest in our model if a stage of pre-play communication were added. With a slight behavioral modification, the reasoning of Prendergast and Stole (2001) can also be had: if a country suffers regret after efficiently giving to a type different than their own, there is a premium for guessing correctly. In Prendergast and Stole the two types are equal except in labeling; in our model, high types and low types are used so there is an incentive for low types to try to pose as high types. However, putting this difference aside, the inefficiency result can be viewed as similar to that in Prendergast and Stole (2001). That is, if countries suffer a ``mismatching'' cost due to giving to the wrong type, they will be hesitant to do so and may offer inefficient concessions.} Instead of being in reaction to a behavioral regret for mismatching or serving as a way to discourage low types from entering the game altogether, here making concessions inefficient is a device to prevent low types from using those concessions against the giver of the concessions in the future.
+Inefficient concessions are optimal when there's a good chance of facing a low type who will use the concession against you (i.e. $p$ is small) as well as when the benefits from Cooperation are small relative to the damages from No Cooperation. This finding of inefficiency is for profoundly different reasons than the literature related to Camerer (1988) or Prendergast and Stole (2001).\footnote{Since our initial setup is essentially identical to Camerer's, inefficiency of  pre-play communication would also manifest in our model if a stage of pre-play communication were added. With a slight behavioral modification, the reasoning of Prendergast and Stole (2001) can also be had: if a country suffers regret after efficiently giving to a type different than their own, there is a premium for guessing correctly. In Prendergast and Stole the two types are equal except in labeling; in our model, high types and low types are used so there is an incentive for low types to try to pose as high types. However, putting this difference aside, the inefficiency result can be viewed as similar to that in Prendergast and Stole (2001). That is, if countries suffer a ``mismatching'' cost due to giving to the wrong type, they will be hesitant to do so and may offer inefficient concessions.} Instead of being in reaction to a behavioral regret for mismatching or serving as a way to discourage low types from entering the game altogether, here making concessions inefficient is a device to prevent low types from using those concessions against the giver of the concessions in the future.
 
 \section{Mediation}
 \label{sec:med}
@@ -431,7 +431,7 @@ That is, one high type equilibrium strategy is to pool with the low types---by a
  We examine the conditions for a separating equilibrium held in place by a grim trigger.
  
  \noindent{\emph{Proof of Theorem \ref{theorem:1}}:\\
-Playing Trust in the first period and thereafter as long as Trust has always been played will be incentive compatible for high types if the expected payoffs from this strategy are greater than the payoffs from playing Distrust in the first period and then every period thereafter by the one-shot deviation principle. If both countries play Trust in a period, a Cooperation equilibrium takes place and both countries continue to play Trust in every period with the grim trigger threat of the ``War'' equilibrium. Low types play Distrust in the first period, so a high type that observed Distrust being played would respond by playing Distrust in period 2 and in all future periods. A country plays Trust if and only if the following condition is satisfied:
+Playing Trust in the first period and thereafter as long as Trust has always been played will be incentive compatible for high types if the expected payoffs from this strategy are greater than the payoffs from playing Distrust in the first period and then every period thereafter by the one-shot deviation principle. If both countries play Trust in a period, a Cooperation equilibrium takes place and both countries continue to play Trust in every period with the grim trigger threat of Distrust. Low types play Distrust in the first period, so a high type that observed Distrust being played would respond by playing Distrust in period 2 and in all future periods. A country plays Trust if and only if the following condition is satisfied:
 \begin{equation*}
   p\left(\frac{T}{1- \delta}\right) +(1-p)\left({-D}+\frac{\delta(W-D)}{1- \delta} \right)\geq p \left(T + W + \frac{\de}{1-\de}(W-D)\right) +(1-p)\frac{W-D}{1- \delta}
 \end{equation*}
@@ -457,7 +457,7 @@ If the potential advantages of Cooperation are large enough to outweigh the risk
 
 \subsection{Concessions Separating Equilibrium}
 
-If the condition in Expression~\ref{eq:ncse} is not met, a separating equilibrium cannot be achieved with no concessions in period 0.\footnote{Countries need to deliver concessions in period 0, not just promise them. A concession that is promised but not delivered will count as cheap talk.} If instead high-type negotiating parties have sufficient incentive to give a concession that reveals their type in period 0, the high types could safely play Trust in period 1, allowing two high types to avoid the trap of the ``War'' outcome that would occur under pooling. 
+If the condition in Expression~\ref{eq:ncse} is not met, a separating equilibrium cannot be achieved with no concessions in period 0.\footnote{Countries need to deliver concessions in period 0, not just promise them. A concession that is promised but not delivered will count as cheap talk.} If instead high-type negotiating parties have sufficient incentive to give a concession that reveals their type in period 0, the high types could safely play Trust in period 1, allowing two high types to avoid the trap of the No Cooperation outcome that would occur under pooling. 
 
 Below are the details of the \emph{concessions separating equilibrium} analysis. We refer to the equilibrium separating gifts as $g_h$ from the high type and $g_l$ from the low type. These equilibrium gifts will mean that when period 1 is reached, countries know which type the other country is and play accordingly. The concessions phase acts as a coordination device to match countries' actions. To play different actions from each other is an off-equilibrium contingency. These off-equilibrium payoffs are nonetheless necessary for calculating the minimum separating concession. 
 \\
@@ -721,7 +721,7 @@ Here we specify that the mediator chooses $e=1$, which means that gift giving an
 		\[
 			\frac{W-D}{1-\de_l} \geq T + \left(\cdot \right) + W + \left(\cdot \right) + \frac{\de_l}{1-\de_l}\left(W+ \left(\cdot \right) -D - \left(\cdot \right) \right)
 		\]
-There are no gifts on the left hand side and so the payoffs from Table 1 apply. The right hand side has place holders $\left(\cdot\right)$ for the impact of the material value of gifts. On the right hand side, we have only the case where both parties declare themselves to be high types. Both parties are instructed to give efficient gifts. The negotiating partner really \emph{is} a high type and thus invests entirely in civil society because they expect to play the Cooperation equilibrium. The low-type player knows it will defect and be in a ``War'' equilibrium and so invests entirely in the military. 
+There are no gifts on the left hand side and so the payoffs from Table 1 apply. The right hand side has place holders $\left(\cdot\right)$ for the impact of the material value of gifts. On the right hand side, we have only the case where both parties declare themselves to be high types. Both parties are instructed to give efficient gifts. The negotiating partner really \emph{is} a high type and thus invests entirely in civil society because they expect to play the Cooperation equilibrium. The low-type player knows it will defect and be in a No Cooperation equilibrium and so invests entirely in the military. 
 %		\begin{multline}
 %			W-D \geq 
 %			\left(1-\de_l\right) \left[T + \al_2Tg^M + W + \left(1-\al_1\right)Wg_2 \right] \\
@@ -740,7 +740,7 @@ Canceling like terms and rearranging, we have
 			Since we assume throughout that gifts must be non-negative, each of $T, W$ and $D$ are positive and $0 \leq \de_l \leq 1$, this inequality can never hold.	\hfill $\blacksquare$\\
 			\\
 \emph{Proof of Theorem~\ref{theorem:med}:}\\
-(a) The low type's individual rationality constraint is satisfied trivially: the low type gets the `War' payoff forever outside the mechanism; it also gets the `War' payoff forever \emph{inside} the mechanism while not giving or receiving any concession.
+(a) The low type's individual rationality constraint is satisfied trivially: the low type gets the No Cooperation payoff forever outside the mechanism; it also gets the No Cooperation payoff forever \emph{inside} the mechanism while not giving or receiving any concession.
 
 For the general form of the low type incentive compatibility constraint, we start from Expression~\ref{eq:med} and add back in the $e$'s that were removed when assuming $e=1$ in the proof of Lemma \ref{lemma:med}. So we start from
 \begin{equation*}
@@ -766,7 +766,7 @@ If Condition~\ref{eq:med3} is met, the mechanism is incentive compatible for the
 	pX_{TT}^h+(1-p)X_{FF}^h - pg_h +peg_h \geq X_{FF}^h 
 	\label{eq:med4}
 \end{equation}
-It is always optimal for the high type to invest in civil society when they truthfully reveal. When a high type misrepresents itself as a low type, the mechanism specifies that gifts are exchanged only when there are two high types. This means that there will be no concessions when a high type lies. This implies that Expression~\ref{eq:med4} is also the individual rationality constraint since outside the mechanism they get the `War' payoff and exchange no concessions.
+It is always optimal for the high type to invest in civil society when they truthfully reveal. When a high type misrepresents itself as a low type, the mechanism specifies that gifts are exchanged only when there are two high types. This means that there will be no concessions when a high type lies. This implies that Expression~\ref{eq:med4} is also the individual rationality constraint since outside the mechanism they get the No Cooperation payoff and exchange no concessions.
 
 Thus the constraint for both incentive compatibility and individual rationality is
 \begin{equation*}
