--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -185,28 +185,28 @@ In the \emph{concessions separating equilibrium}, low types do not give concessi
 Details of the analysis are in the Appendix. We begin by characterizing the concession (or \emph{gift}) giving behavior of the low type. We then present the patience threshold and gift giving behavior of the high type.
 
 \begin{lemma}
-	In a separating equilibrium, low types do not give a concession. Cheap talk does not allow for a concessions separating equilibrium.
+	In a separating equilibrium, low types do not give a concession. Cheap talk does not allow for a \emph{concessions separating equilibrium}.
 	\label{lemma:3}
 \end{lemma}
 \emph{Proof:} See Appendix.
 
-Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession. Therefore, there cannot be a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions and the players separating in the repeated game as in the no concessions separating equilibrium.}
+Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession. Therefore, there cannot be a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions and the players separating in the repeated game as in the \emph{no-concessions separating equilibrium}.}
 
 \begin{theorem}
 \emph{Concessions Separating Equilibrium (CSE)}
 	\begin{enumerate}
 		\item[(a)] Assume $\delta_h \geq \frac{W}{T+D} = \de^{c}$. Then a subgame perfect Nash equilibrium exists in which low types give no concessions in period 0 and always play Distrust and the high types give a concession in period 0 and play Trust unless the other country defects to Distrust.
-		\item[(b)] In the best concessions separating equilibrium, high types give a concession of $p(T + D)$, which is the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
+		\item[(b)] In the best \emph{concessions separating equilibrium}, high types give a concession of $p(T + D)$, which is the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
 \end{enumerate}
 	\label{theorem:2}
 \end{theorem}
 \emph{Proof:} See Appendix.
 
-This `best' concessions separating equilibrium, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
+This `best' \emph{concessions separating equilibrium}, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
-Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving cooperation. We will focus on the pure concessions separating equilibrium in the analysis below because it provides the best chance for Cooperation and is possible over a much larger portion of the parameter space.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
+Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving cooperation. We will focus on the pure \emph{concessions separating equilibrium} in the analysis below because it provides the best chance for Cooperation and is possible over a much larger portion of the parameter space.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
 
-We complete our analysis of the \emph{concessions separating equilibrium} by comparing it to the \emph{no concessions separating equilibrium} in Section~\ref{sec:ncse}.
+We complete our analysis of the \emph{concessions separating equilibrium} by comparing it to the \emph{no-concessions separating equilibrium} in Section~\ref{sec:ncse}.
 
 \begin{corollary}
 	The \emph{no-concessions separating equilibrium} requires countries to be more patient than the \emph{concessions separating equilibrium}. If both equilibria exist, the \emph{no-concessions separating equilibrium} is preferred when the probability of encountering a high type is sufficiently large.
@@ -250,13 +250,13 @@ If both countries play Distrust, Country 1 receives not only the immediate value
 
 Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare in equilibrium is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the Cooperation outcome will be played. Conversely, in equilibrium, low types only participate in the No Cooperation equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
 
-We turn next to characterizing a concessions separating equilibrium in this environment with future material value.
+We turn next to characterizing a \emph{concessions separating equilibrium} in this environment with future material value.
 
 \begin{theorem}
 \emph{Concessions Separating Equilibrium (CSE) with Material Value}
 	\begin{enumerate}
 		\item[(a)] Assume $\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D$ is positive and $\de_h \geq \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1 = \de^{1}$. Then a subgame perfect Nash equilibrium exists in which low types give no concessions in period 0 and always play Distrust and the high types give a concession in period 0 and play Trust unless the other country defects to Distrust.
-		\item[(b)] In the best concessions separating equilibrium when gifts have full material value, high types give a concession of $\frac{\left(1-\de_l\right)p\left(D + T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}$, which is the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
+		\item[(b)] In the best \emph{concessions separating equilibrium} when gifts have full material value, high types give a concession of $\frac{\left(1-\de_l\right)p\left(D + T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}$, which is the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
 \end{enumerate}
 	\label{theorem:csemv}
 \end{theorem}
@@ -271,7 +271,7 @@ The problem with concessions with material value is that the potential for the l
 
 \emph{Proof}: An example suffices as proof. Let $T = 1$, $W=1$ and $D = 1$. The assumption that $T > W - D$ is satisfied, and the threshold for high types to separate when concessions do not have future material value is $\de = \frac{1}{1+1} = 0.5$. Let $\de_h = 0.7$ and $\de_l = 0.3$ and $p = 0.9$.
 
-By Theorems~\ref{theorem:1} and ~\ref{theorem:2}, both the \emph{no concessions separating equilibrium} and the \emph{concessions separating equilibrium} are possible when gifts have no material value.
+By Theorems~\ref{theorem:1} and ~\ref{theorem:2}, both the \emph{no-concessions separating equilibrium} and the \emph{concessions separating equilibrium} are possible when gifts have no material value.
 
 The patience threshold to separate through concessions with future material value is much higher under these parameters when the concessions carry future material value: by Theorem~\ref{theorem:csemv}(a), this threshold is $0.979$. Thus the \emph{concessions separating equilibrium with efficient gifts} is \emph{not} possible. 
 
@@ -301,7 +301,7 @@ We implement this assumption by allowing countries to choose a scalar $e \in[0,1
 \end{tabular}
 \end{center}
 
-We have established the results for the concessions separating equilibrium when no material value is destroyed, i.e. $e=1$, in Section~\ref{sec:IC}. It turns out that we have also established the results for the concessions separating equilibrium when all material value is destroyed, i.e. $e=0$. Notice that if $e=0$, the payoffs in Table 3 are the same as the payoffs in Table 1 and thus the results of Section~\ref{sec:cse} apply.
+We have established the results for the \emph{concessions separating equilibrium} when no material value is destroyed, i.e. $e=1$, in Section~\ref{sec:IC}. It turns out that we have also established the results for the \emph{concessions separating equilibrium} when all material value is destroyed, i.e. $e=0$. Notice that if $e=0$, the payoffs in Table 3 are the same as the payoffs in Table 1 and thus the results of Section~\ref{sec:cse} apply.
 
 Before turning to the question of how the possibility of destroying the value of concessions impacts the ability of the parties to cooperate, we first formally establish the welfare implications.
 
@@ -461,7 +461,7 @@ Below are the details of the \emph{concessions separating equilibrium} analysis.
 \\
 \\
 \emph{Proof of Lemma~\ref{lemma:3}:}\\
-In accord with the Revelation Principle (Myerson 1979), we focus without loss of generality on concessions separating equilibrium in which countries reveal their types truthfully. This allows high types to only play ``Trust'' in period 1 with other high types and to play Distrust with low types. Low types play Distrust (Lemma~\ref{lemma:1}) and their equilibrium payoff is $U_l=X_{FF}+ pg_h-g_l$.
+In accord with the Revelation Principle (Myerson 1979), we focus without loss of generality on \emph{concessions separating equilibria} in which countries reveal their types truthfully. This allows high types to only play ``Trust'' in period 1 with other high types and to play Distrust with low types. Low types play Distrust (Lemma~\ref{lemma:1}) and their equilibrium payoff is $U_l=X_{FF}+ pg_h-g_l$.
 
 Though low types might be willing to give a non-zero gift in a separating equilibrium, they will only do this if it gives them some advantage. Here, high types only cooperate with other high types, so giving a concession cannot help low types to achieve a higher payoff in the repeated game. Because their concession $g_l$ enters negatively in the payoff function, low types' optimal concession is therefore 0.
 
@@ -492,25 +492,25 @@ In terms of fundamentals, we have
 	p\frac{T}{1-\de_h}+(1-p)\frac{W-D}{1-\de_h} - g_h \geq \frac{W-D}{1-\de_h}
 	\label{eq:cse3}
 \ee
-Combining Expressions~\ref{eq:cse2} and \ref{eq:cse3}, we have the condition for a concessions separating equilibrium to exist:
+Combining Expressions~\ref{eq:cse2} and \ref{eq:cse3}, we have the condition for a \emph{concessions separating equilibrium} to exist:
 \be
 \delta_h \geq \frac{W}{T+D} = \de^c
 \ee
 That is, we simply need the high types to have a sufficiently large discount factor. \hfill $\blacksquare$\\
 \\
 \emph{Proof of Corollary~\ref{corollary:1}:}\\
-To show that the patience threshold for the \emph{no concessions separating equilibrium} is greater than the patience threshold for the \emph{concessions separating equilibrium}, we start with the assumption $T+D>W.$
+To show that the patience threshold for the \emph{no-concessions separating equilibrium} is greater than the patience threshold for the \emph{concessions separating equilibrium}, we start with the assumption $T+D>W.$
 
 We multiply both sides by $(1-p)>0$ and then subtract $p(T+D)$ from both sides to get
 $$(T+D) > (1-p)W +p(T+D).$$
 Since $0<p<1$ and W,T, and D are all positive, both sides of the inequality are positive. Thus we have:
 $$\de^{nc} = \frac{W}{(1-p)W +p(T+D)} > \frac{W}{T+D} = \de^{c} $$
 
-In the case that both types of equilibria exist, i.e. $\de_h \geq \de^{nc}$, the high types will prefer the \emph{no concessions separating equilibrium} if and only if
+In the case that both types of equilibria exist, i.e. $\de_h \geq \de^{nc}$, the high types will prefer the \emph{no-concessions separating equilibrium} if and only if
 \begin{equation*}
 p\left(\frac{T}{1- \delta_h}\right) +(1-p)\left({-D}+\frac{\delta_h(W-D)}{1- \delta_h} \right) \geq p\left(\frac{T}{1- \delta_h}\right)+(1-p)\left(\frac{W-D}{1- \delta_h}\right) - (1-p)g_h 
 \end{equation*}
-This simplifies to preferring the concessions separating equilibrium if and only if
+This simplifies to preferring the \emph{concessions separating equilibrium} if and only if
 $$0 \geq (1-p)W-p(1-p)(T+D)$$
 Rearranging,
 \be
@@ -572,7 +572,7 @@ $$\de_h g^1 \geq p(W+Wg^1-D) - pT(1+g^1) + (1-p)Dg^1 + g^1$$
 %$$\de_h \geq \frac{p(W-D-T) + pg^1 (W-T) + (1-p)Dg^1 + g^1 }{g^1}$$
 $$\de_h \geq \frac{p(W-D-T)}{g^1} + p (W-T) + (1-p)D + 1$$
 
-Substituting the minimum efficient concession from Expression~\ref{eq:matval2}, we have the condition for a concessions separating equilibrium to exist in terms of fundamentals:
+Substituting the minimum efficient concession from Expression~\ref{eq:matval2}, we have the condition for a \emph{concessions separating equilibrium} to exist in terms of fundamentals:
 \be
 	\de_h \geq \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1 = \de^1
 \ee
